# hcai_workbench

./: LICENSE  README.md  pyproject.toml
src/hcai_workbench/: __init__.py  __main__.py  config.py  models.py
src/hcai_workbench/experiments/: README.md  __init__.py  __main__.py  funny.py  riddle.py  seahorse.py  strawberry.py  sunday.py
tests/: test_hcai_workbench.py
